--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "source": "src/index.html",
   "browserslist": "> 0.3%, last 3 versions, not dead",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "parcel:start": "parcel src/index.html",
+    "parcel:build": "parcel build src/index.html",
+    "clean": "rimraf dist .cache .cache-loader",
+    "start": "npm-run-all clean parcel:start",
+    "build": "npm-run-all clean parcel:build"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.3.1",
-    "parcel": "latest"
+    "npm-run-all": "^4.1.5",
+    "parcel": "latest",
+    "rimraf": "^3.0.2"
   }
 }
